--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,3 +17,10 @@
 .header a:hover{
     color: orange;
 }
+.btn-logOut{
+    text-decoration: none;
+    font-size: 17px;
+    margin-left: 36px;
+    margin-right: 10px;
+    border: none;
+}
