--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,7 +1,7 @@
 .product{
     width: 300px;
     height: 510px;
-    border: 1px solid #95A0A7;
+    border: 1px dashed #95A0A7;
     border-radius: 8px;
     position: relative;
 }
@@ -39,7 +39,9 @@
 }
 .btn-cart .btn-text{
     margin-right: 5px;
+    font-family: 'Josefin Sans', sans-serif;
 }
 .btn-cart:hover{
-    background-color: orange;
+    background-color: #FF8B38;
+    color: white;
 }
